# kreski_projekt

./: .gitignore  CMakeLists.txt  README.md  a.cpp  a.h  kreski  kreskiprojekt  kreskiprojekt.cpp  macro.c  macro.cpp  makefile  readme.md  testing.cpp
include/: fun.h  rnd.h
src/: COMMIT_EDITMSG.COMMIT_EDITMSG  fun.cpp  main.cpp  testing.c  testing.cpp
